# Cargo.toml
[package]
name = "singbox-tester"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "socks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
palc = { version = "0.0.2" }
regex = "1.12.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
